AB#1128 fix color contrast between warning text and link text

--- a/desktop/src/app/components/pool/details/configuration/pool-configuration.scss
+++ b/desktop/src/app/components/pool/details/configuration/pool-configuration.scss
@@ -5,8 +5,8 @@ bl-pool-configuration {
     .certificate-deprecation-warning {
         > .warning {
             background-color: var(--color-warn-50);
-            // using the color from var(--color-text-primary)
-            color: #333333;
+            // Primary text color was not dark enough to contrast with link color. Deepened it 6 shades.
+            color: #201F1E;
 
             > .summary-container {
 
@@ -22,7 +22,6 @@ bl-pool-configuration {
     }
 
     .certificate-warning-alternative-link {
-        // using the color from var(--color-primary-800);
-        color: #1d54af;
+        color: var(--color-primary-600);
     }
 }
